5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/2841/executions/1592_1800.log
== TEST (2019-05-02 18:50:40) 
-- CODE:
a = input ()
b = input ()
c = input ()

f = (a**2+b**2+c**2)/(a+b+c)

print(f:.2f)
-- ERROR:
File "XXXX", line 7
    print(f:.2f)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:41) 
-- CODE:
a = input ()
b = input ()
c = input ()

f = (a**2+b**2+c**2)/(a+b+c)

print (round (f, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = (a**2+b**2+c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:22) 
-- CODE:
a = int(input ())
b = int(input ())
c = int(input ())

f = (a**2+b**2+c**2)/(a+b+c)

print (round (f, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:23) 
-- CODE:
a = int(input ())
b = int(input ())
c = int(input ())

f = (a**2+b**2+c**2)/(a+b+c)

print (round (f, 7))
-- EXECUTION TIME:
0.159599
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
